[tool.poetry]
name = "road-network-cutting-evaluation"
version = "0.1.0"
description = ""
authors = ["Ryusei Kakujo <ryusei.kakujo@traffine.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
seaborn = "^0.13.2"
pyarrow = "^15.0.0"
natsort = "^8.4.0"
loguru = "^0.7.2"
geopandas = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
